manifests/deploy.yaml
#       Copyright 2017-2019 IBM Corp All Rights Reserved

#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at

#       http://www.apache.org/licenses/LICENSE-2.0

#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

#Deploy the pod
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: stock-quote
  labels:
    app: stock-quote
    version: v1
  annotations:
    prism.subkind: Liberty
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: stock-quote
        version: v1
        solution: stock-trader
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: "9080"
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
      - name: stock-quote
#       image: stock-quote:latest # Microservice Builder
#       image: mycluster.icp:8500/stock-trader/stock-quote:latest # IBM Cloud Private
#       image: registry.ng.bluemix.net/stock_trader/stock-quote:latest # IBM Kubernetes Service
#       Note: this manifests/deploy.yaml will be used when we want to deploy this directly using kubectl or a helm chart. 
#             Microclimate uses the Charts folder so we can actually have both options
        image: docker.io/linsun/stock-quote:latest
#        image: ibmstocktrader/stock-quote:latest # DockerHub
        ports:
          - containerPort: 9080
          - containerPort: 9443
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 60
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 5 # Allow a little time to exec into the pod to grab FFDCs before it's killed
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 128Mi
---
#Deploy the service
apiVersion: v1
kind: Service
metadata:
  name: stock-quote-service
# namespace: stock-trader
  labels:
    app: stock-quote
    solution: stock-trader
spec:
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
    - name: https
      protocol: TCP
      port: 9443
      targetPort: 9443
  selector:
    app: stock-quote
