manifests/iex-vs-match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iex-virtual-service
spec:
  hosts:
  - "cloud.iexapis.com"
  exportTo:
  - "."
  http:
  - match:
    - sourceLabels:
        app: stock-quote
    timeout: 3s
    route:
      - destination:
          host: "cloud.iexapis.com"
        weight: 100
