manifests/iex-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iex-virtual-service
spec:
  hosts:
  - "cloud.iexapis.com"
  http:
  - timeout: 3s
    route:
      - destination:
          host: "cloud.iexapis.com"
        weight: 100
