manifests/se-apiconnect.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-connect-service-entry
spec:
  hosts:
  - "api.us.apiconnect.ibmcloud.com"
  ports:
  - number: 443
    name: https
    protocol: https
  resolution: DNS
