manifests/se-iex-scoped.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: api-connect-service-entry
spec:
  hosts:
  - "cloud.iexapis.com"
  exportTo:
  - "."
  ports:
  - number: 443
    name: https
    protocol: https
  resolution: DNS
