manifests/se-iex.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: iex-service-entry
spec:
  hosts:
  - "cloud.iexapis.com"
  ports:
  - number: 443
    name: https
    protocol: https
  resolution: DNS
