manifests/stock-quote-vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-stock-quote
spec:
  hosts:
  - stock-quote-service
  http:
  - fault:
      delay:
        fixedDelay: 90s
        percent: 100
    route:
    - destination:
        host: stock-quote-service
        port:
          number: 9080
