manifests/stock-quote-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-stock-quote
spec:
  hosts:
  - stock-quote-service
  http:
  - route:
    - destination:
        host: stock-quote-service.stock-quote
        port:
          number: 9080
